# haskell-from-first-principles

chapter10.Folding Lists/: chapter10.cabal  package.yaml
chapter10.Folding Lists/src/: database.hs  exercies.hs  scan.hs  section10.4.hs  section10_6.hs
chapter11.Algebraic Datatypes/: chapter11.cabal  package.yaml
chapter11.Algebraic Datatypes/src/: asPattern.hs  binaryTree.hs  caeser_cipher.hs  consAndDecons.hs  dataConstructorsAndValues.hs  exercises.hs  huttonRazor.hs  list.hs  newtype.hs  phone.hs  phone2.hs  records.hs  sumTypes.hs  vigenere.hs  vigenereIO.hs
chapter12.Signaling Adversity/: 12.3.either.hs  12.5.exercises.hs
chapter12.Signaling Adversity/exercises/: bTree.hs  eitherLibrary.hs  kinds.hs  maybeLibrary.hs  naturalNumbers.hs  stringProcessing.hs  unfolds.hs
chapter13.Building Projects/hangman/: hangman.cabal
chapter14.Testing/addition/: Addition.hs  addition.cabal
chapter14.Testing/addition/.stack-work/: stack.sqlite3
chapter14.Testing/addition/.stack-work/ghci/930bc2c5/: cabal_macros.h
chapter14.Testing/addition/.stack-work/ghci/cb58b943/: cabal_macros.h
chapter14.Testing/addition/.stack-work/ghci/f5fe876a/: cabal_macros.h
chapter2.Hello, Haskell/: chapter2.cabal
chapter3.Strings/: chapter3.cabal  package.yaml
chapter4.Basic Datatypes/: chapter4.cabal  package.yaml
chapter5.Types/: chapter5.cabal  package.yaml
chapter6.Typeclasses/: chapter6.cabal  package.yaml
chapter7.More Functional Patterns/: chapter7.cabal  package.yaml
chapter8.Recursion/: chapter8.cabal  package.yaml
chapter9.List/: chapter9.cabal  package.yaml
(+166 files in other folders)
